updated header, fonts, gradient in header/footer

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Treats By Jay</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Oswald:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
  <body>
@@ -20,7 +22,7 @@
       </header>
       
 
-      <h1 class="tag name">About the baker</h1>
+      <h1 class="tag name">About the Baker</h1>
 
       <div class="">
         <h2 class="">Background</h2>
