added some flex box, updated logo, added to menu and contact pages

--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
 </head>
 
  <body>
-      <header>
-        <div class="main-nav">
-          <img class="nav-logo" src="images/logo.png">
+      <header class="main-nav">
+          <img class="nav-logo" src="images/logo.png" alt="Treats By Jay">
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
-        </div>
       </header>
       
       <div class="body">
-        <h1 class="tag name">Pull up and chair and get ready to eat your feelings.</h1>
+        <h1 class="tag name">Pull up a chair and get ready to eat your feelings.</h1>
         
             <!-- image carousel here?  -->
             <div class="carousel">
@@ -45,8 +43,8 @@
 
     <footer class="footer">
       <p class="copyright">Copyright 2020, Treats by Jay</p>
-            <!-- insert some clickable social media buttons -->
-    </footer>
+            <!-- insert some clickable social media buttons... align them to the R on the same line as the copyright -->
+      </footer>
   </body>
   </html>
 
