--- a/menu.html
+++ b/menu.html
@@ -9,27 +9,36 @@
 </head>
 
  <body>
-      <header>
-        <div class="main-nav">
-          <img class="nav-logo" src="images/logo.png">
-          <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </header>
+      <header class="main-nav">
+        <img class="nav-logo" src="images/logo.png" alt="Treats By Jay">
+        <ul class="nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </header>
         
       <h1 class="tag name">The Good Stuff</h1>  
         <div class="body">
-        <p>Cool your jets, turbo. This will be a list of food one day. </p>
+        <p>Cool your jets, turbo. This will be a list of delicious food one day. </p>
+        <br>
+        <p>In the meantime, here are some pictures of things I've made.</p>
+
+        <img class="treat" src="images/coral-flower-cake.jpg" alt="Cake with Coral Flowers">
+        <img class="treat" src="images/lemon-tart.png" alt="Lemon Tart">
+        <img class="treat" src="images/meringue.jpg" alt="Lemon Meringue Pie">
+        <img class="treat" src="images/three-cupcakes.jpg" alt="Assorted Cupcakes">
+
+        <p>We'll do some columns and lists in this area.</p>
+
+
         </div>
       
 
     <footer class="footer">
       <p class="copyright">Copyright 2020, Treats by Jay</p>
-            <!-- insert some clickable social media buttons -->
+            <!-- insert some clickable social media buttons... align them to the R on the same line as the copyright -->
     </footer>
   </body>
   </html>
