--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       
 
     <footer class="footer">
-      <p class="copyright">Copyright 2020, Treats by Jay</p>
+      <p class="copyright">Copyright 2020, Treats by Jay.   Treats by Jay is not responsible for expanding waistlines.</p>
+
             <!-- insert some clickable social media buttons... align them to the R on the same line as the copyright -->
       </footer>
   </body>
