--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,8 @@
         <img class="treat" src="images/lemon-tart.png" alt="Lemon Tart">
         <img class="treat" src="images/meringue.jpg" alt="Lemon Meringue Pie">
         <img class="treat" src="images/three-cupcakes.jpg" alt="Assorted Cupcakes">
-
+        <img class="treat" src="images/63-days.png" alt="Decorated Cake">
+        <img class="treat" src="images/HBD.png" alt="Happy Birthday Cake">
         <p>We'll do some columns and lists in this area.</p>
 
 
