--- a/menu.html
+++ b/menu.html
@@ -8,16 +8,17 @@
 
 </head>
 
- <body>
-      <header class="main-nav">
-        <img class="nav-logo" src="images/logo.png" alt="Treats By Jay">
-        <ul class="nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </header>
+<body class="site">
+  <header class="main-nav">
+    <img class="nav-logo" src="images/logo.png" alt="Treats By Jay">
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </header>
+<main class="content">  
         
       <h1 class="tag name">The Good Stuff</h1>  
         <div class="body">
@@ -36,7 +37,7 @@
 
         </div>
       
-
+</main>
     <footer class="footer">
       <p class="copyright">Copyright 2020, Treats by Jay.   Treats by Jay is not responsible for expanding waistlines.</p>
 
