tried js. failed

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Treats By Jay</title>
   <link rel="stylesheet" href="css/styles.css">
+  <script src="app.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Oswald:wght@300&display=swap" rel="stylesheet">
 
 </head>
@@ -11,12 +12,14 @@
  <body class="site">
       <header class="main-nav">
         <img class="nav-logo" src="images/logo.png" alt="Treats By Jay">
+        <nav>
         <ul class="nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="menu.html">Menu</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
+      </nav>
       </header>
     <main class="content">    
      <h1 class="">Contact Jay!</h1>  
