--- a/menu.html
+++ b/menu.html
@@ -11,12 +11,14 @@
 <body class="site">
   <header class="main-nav">
     <img class="nav-logo" src="images/logo.png" alt="Treats By Jay">
+    <nav>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="menu.html">Menu</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+  </nav>
   </header>
 <main class="content">  
         
