tweaked the form

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
   <title>Treats By Jay</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="app.js"></script>
@@ -33,10 +33,10 @@
           <input type="text" id="name" required="required">
 
           <label for="name">Phone:</label> 
-          <input type="text" id="phone" placeholder="502-867-5309" required="required">
+          <input type="phone" id="phone" placeholder="502-867-5309" required="required">
     
            <label for="email">Email:</label>
-           <input type="text" id="email" placeholder="email@website.com" required="required">
+           <input type="email" id="email" placeholder="email@website.com" required="required">
       
            <label for="msg">Message:</label>
            <textarea id="msg" rows="10"></textarea>
