fixed form that i broke

--- a/menu.html
+++ b/menu.html
@@ -46,6 +46,8 @@
               <li>Lemon or Chocolate Meringe</li>
               <li>Chocolate Chip Cookies</li>
               <li>Double Chocolate Chip Cookies</li>
+              <li>Banana Bread</li>
+              <li>Lemon Pound Cake</li>
               <li>Chocolate Fudge</li>
               <li>Pumpkin Fudge*</li>
             </ul>
@@ -62,7 +64,8 @@
               <li>Pre-measured Brownie Mix</li>
               <li>Pie Crusts</li>
             </ul>
-            <p class="menu-note">Cookie dough comes refridgerated, and by the dozen.</p>
+            <p class="menu-note">Cookie dough comes refridgerated, and by the dozen. Baking instructions are included.</p>
+            <p class="menu-note">Brownie mix comes with list of needed wet ingredients and baking instructions.</p>
           </div>
 
           <div class="menu4">  
