styled carousel, attempted js

--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
           
           <p>Welcome to the bakery! We have a mulitude of treats.</p>
 
-            <div class="">
-              <img class="carousel" alt="Images of Desserts" src="images/HBD.png" id="slideshow" />
-            </div> 
+          <div class="carousel-wrapper">
+            <div class="carousel">
+              <img class="carousel__photo initial" src="images/63-days.png">
+              <img class="carousel__photo" src="images/carrot-cake.JPG">
+              <img class="carousel__photo" src="images/coral-flower-cake.jpg">
+              <img class="carousel__photo" src="images/three-cupcakes.jpg">
+              <img class="carousel__photo" src="images/meringue.jpg">
+                
+              <div class="carousel__button--prev"></div>
+              <div class="carousel__button--next"></div>
+            </div>
+          </div>
 
 
           <div class="">
