--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,9 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="app.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Oswald:wght@300&display=swap" rel="stylesheet">
-
 </head>
 
- <body class="site">
+  <body class="site">
       <header class="main-nav">
         <img class="nav-logo" src="images/logo.png" alt="Treats By Jay">
         <nav>
@@ -35,30 +34,27 @@
           <input class="fieldWidth" type="phone" id="phone" placeholder="502-867-5309" required="required">
     
            <label for="email">Email:</label><br>
-           <input class="fieldWidth" type="email" id="email" placeholder="email@website.com" required="required">
+           <input class="fieldWidth" type="email" id="email" placeholder="Your Email" required="required">
            <br>
            <label for="msg">Message:</label>
            <textarea class="fieldWidth" id="msg" rows="10"></textarea>
 
-          <div class="checkboxes">
-            <label for="checkboxes">Contact Preference:<br>
-              <!-- <label for="phone">Phone</label> -->
-              <input type="checkbox" id="phonecheck" value="yes">Phone<br>
-              <!-- <label for="email">Email</label> -->
-              <input type="checkbox" id="emailcheck" value="yes">Email<br>
-            </label>
-          </div>
+            <div class="checkboxes">
+              <label for="checkboxes">Contact Preference:<br>
+                <input type="checkbox" id="phonecheck" value="yes">Phone<br>
+                <input type="checkbox" id="emailcheck" value="yes">Email<br>
+              </label>
+            </div>
             <input class="fieldWidth" type="submit" value="Submit">
         </form>
-        
-      </div>
+     </div>
     </main>
 
     <footer class="footer">
       <p class="copyright">Copyright 2020, Treats by Jay.   Treats by Jay is not responsible for expanding waistlines.</p>
 
             <!-- insert some clickable social media buttons... align them to the R on the same line as the copyright -->
-      </footer>
+    </footer>
   </body>
   </html>
 
