updated about page, grid styling

--- a/about.html
+++ b/about.html
@@ -22,17 +22,21 @@
       <main class="content">   
          <h1>About the Baker</h1>
 
-        <div class="col1">
-        <h2>Then</h2>
-          <p class="body">Jay started baking cookies with her grandma, every christmas, when she was younger. That's one of the first memories Jay has of baking. Peanut butter, chocolate chip, sugar, thumbprint cookies and more. During college, Jay baked as a means of releiving stress. It turned out she actually had some pretty mad skills in the kitchen. After college, Jay really delved into baking-- a chocolate cake with chocolate icing opened the door to the beauty of baking from scratch. The kitchen-aid she got for Christmas one year only fueled the fire.</p>
-        </div> 
+        <div class="grid">
+          <div class="item">
+            <h2>Then</h2>
+              <p class="body about">Jay started baking cookies with her Grandma every Christmas when she was younger. That's one of the first memories Jay has of baking. Peanut butter, chocolate chip, sugar, thumbprint cookies and more. During college, Jay baked for her roommates as a means of relieving stress. It turned out she actually had some pretty mad skills in the kitchen. After college, Jay really delved into baking-- a chocolate cake with chocolate icing opened the door to the beauty of baking from scratch. The joy of sharing her food with others and the kitchen-aid mixer from her mom ignited her desire to leave the cube farm and branch out onto her own.</p>
+          </div>
         
-      <!-- <img class="col2" src="images/coral-flower-cake.jpg" alt=""> -->
-        
+          <div class="item">
+            <img class="treat about" src="images/SophAndRambo.jpg" alt="Two dogs">
+            <!-- <img class="treat about" src="images/MeandTrey.JPG" alt="Couple">           -->
+          </div>
 
-        <div class="col3">
-          <h2>Now</h2>
-          <p class="body">Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
+          <div class="item">
+            <h2>Now</h2>
+            <p class="body about">Jay turned her passion for cooking and baking for others into her full time bread and butter. When she’s not testing out recipes, Jay is spending time with her dogs Sophia and Rambo, re-watching the Office or Harry Potter, and the occasional video game. <a href="menu.html">Menu</a> items are always changing, so be sure to check out new additions! Homemade pastas will be available soon!</p>
+            </div>
         </div>  
       </main>
       <footer class="footer">
