--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
            <input class="fieldWidth" type="email" id="email" placeholder="Your Email" required="required">
            <br>
            <label for="msg">Message:</label>
-           <textarea class="fieldWidth" id="msg" rows="10"></textarea>
+           <textarea class="fieldWidth" id="msg" rows="10" required="required"></textarea>
 
             <div class="checkboxes">
               <label for="checkboxes">Contact Preference:<br>
