--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
           
           <p>Welcome to the bakery! We have a mulitude of treats.</p>
 
-          <div class="carousel-wrapper">
-            <div class="carousel">
-              <img class="carousel__photo initial" src="images/63-days.png">
-              <img class="carousel__photo" src="images/carrot-cake.JPG">
-              <img class="carousel__photo" src="images/coral-flower-cake.jpg">
-              <img class="carousel__photo" src="images/three-cupcakes.jpg">
-              <img class="carousel__photo" src="images/meringue.jpg">
-                
-              <div class="carousel__button--prev"></div>
-              <div class="carousel__button--next"></div>
+          <div class="carousel-container">
+            <div class="carousel-slide">
+              <img class="carousel-slide" src="images/meringue.jpg" id="lastClone">
+              <img class="carousel-slide" src="images/63-days.png">
+              <img class="carousel-slide" src="images/carrot-cake.JPG">
+              <img class="carousel-slide" src="images/coral-flower-cake.jpg">
+              <img class="carousel-slide" src="images/three-cupcakes.jpg">
+              <img class="carousel-slide" src="images/meringue.jpg">
+              <img class="carousel-slide" src="images/63-days.png" id="firstClone">
             </div>
+
+              <button id="prevBtn">Prev</button>
+              <button id="nextBtn">Next</button>         
           </div>
 
 
