--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
           <h1 class="tag name">The Good Stuff</h1>  
            <p>All items are made to order and require at least 2 business days notice. Custom decorated cakes and cupcakes require no less than 3 business days notice.</p>
           <div class="grid">
-            <div class="menu1 item">  
+            <div class="item">  
               <h2 class="menu-header">Cakes and Cupcakes</h2>
                 <ul class="menu-items">
                   <li>Chocolate</li>
@@ -45,7 +45,7 @@
               <img class="treat" src="images/lemon-tart.png" alt="Lemon Tart">
             </div>
 
-            <div class="menu2 item">  
+            <div class="item">  
               <h2 class="menu-header">Other Treats</h2>
                 <ul class="menu-items">
                   <li>Lemon Tart</li>
@@ -62,7 +62,7 @@
               <p class="menu-note">*Seasonal item</p>
             </div>
 
-            <div class="menu3 item">  
+            <div class="item">  
               <h2 class="menu-header">Take and Bake</h2>
                 <ul class="menu-items">
                   <li>Chocolate Chip Cookie Dough</li>
@@ -79,7 +79,7 @@
               <img class="treat" src="images/63-days.png" alt="Decorated Cake">
             </div>
 
-            <div class="menu4 item">  
+            <div class="item">  
               <h2 class="menu-header">Take Some Home</h2>
                 <ul class="menu-items">
                   <li>Vanilla Buttercream Icing</li>
