fixed a typo on the menu

--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,7 @@
                   <li>Pre-measured Brownie Mix</li>
                   <li>Pie Crusts</li>
                 </ul>
-              <p class="menu-note">Cookie dough comes refridgerated, and by the dozen. Baking instructions are included.</p>
+              <p class="menu-note">Cookie dough comes refrigerated, and by the dozen. Baking instructions are included.</p>
               <p class="menu-note">Brownie mix comes with list of needed wet ingredients and baking instructions.</p>
             </div>
 
@@ -83,7 +83,7 @@
               <h2 class="menu-header">Take Some Home</h2>
                 <ul class="menu-items">
                   <li>Vanilla Buttercream Icing</li>
-                  <li>Chocoalte Icing</li>
+                  <li>Chocolate Icing</li>
                   <li>Lemon Buttercream Icing</li>
                   <li>Cream Cheese Icing</li>
                   <li>Strawberry Topping</li>
