idk how i broke it. but i reverted to fix the carousel

--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
               <p class="menu-note">Cupcakes are sold by the half dozen or dozen</p>
             </div>
 
-            <div class="item grid-treat">
+            <div class="item">
               <img class="treat" src="images/lemon-tart.png" alt="Lemon Tart">
             </div>
 
@@ -62,9 +62,6 @@
               <p class="menu-note">*Seasonal item</p>
             </div>
 
-              <img class="treat treat-mobile" src="images/cupcake.png" alt="Cupcake with Pink Flowers">
-            
-
             <div class="item">  
               <h2 class="menu-header">Take and Bake</h2>
                 <ul class="menu-items">
@@ -78,8 +75,8 @@
               <p class="menu-note">Brownie mix comes with list of needed wet ingredients and baking instructions.</p>
             </div>
 
-            <div class="item grid-treat">
-              <img class="treat" src="images/chocchipcookie.png" alt="Chocolate Chip Cookies">
+            <div class="item">
+              <img class="treat" src="images/63-days.png" alt="Decorated Cake">
             </div>
 
             <div class="item">  
