--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
   </header>
       <main class="content">   
          <h1>About the Baker</h1>
-            
+   
+         <!-- ABOUT PARAGRAPHS          -->
           <div class="about-div">
               <p class="body">Jay started baking cookies with her Grandma every Christmas when she was younger. That's one of the first memories Jay has of baking. Peanut butter, chocolate chip, sugar, thumbprint cookies and more. During college, Jay baked for her roommates as a means of relieving stress. It turned out she actually had some pretty mad skills in the kitchen. After college, Jay really delved into baking-- a chocolate cake with chocolate icing opened the door to the beauty of baking from scratch. The joy of sharing her food with others and the kitchen-aid mixer from her mom ignited her desire to leave the cube farm and branch out onto her own.</p> 
               <br>         
@@ -33,7 +34,6 @@
       </main>
       <footer class="footer">
         <p class="copyright">Copyright 2020, Treats by Jay.   Treats by Jay is not responsible for expanding waistlines.</p>
-            <!-- insert some clickable social media buttons... align them to the R on the same line as the copyright -->
       </footer>
   </body>
   </html>
