--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     
    <!-- CONTACT FORM -->
      <div id="container">
-        <form class="contact-form" id="form" name="form" onsubmit="checkforBlankFields()" method="GET">
+        <form class="contact-form" id="form" name="form" onsubmit="checkforBlankFields()" method="POST">
         
           <label for="name">Name:</label> 
           <input class="fieldWidth" type="text" id="name">
