final updates. EVERYTHING IS WORKING git add . git push

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,9 @@
               </select>
               <input class="fieldWidth" id="submit" type="submit" value="Submit" onclick="checkforBlankFields()">
         </form>
+
+        <p class="menu-note">Please allow one full business day for a response.</p>
+
      </div>
     </main>
 
