--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <img class="mySlides" src="images/coral-flower-cake.jpg">
               <img class="mySlides" src="images/cupcake.png">
               <img class="mySlides" src="images/meringue.jpg">
-
+                <!-- CAROUSEL BUTTONS -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>        
           </div>
