--- a/menu.html
+++ b/menu.html
@@ -38,7 +38,7 @@
                   <li>Dark Chocolate</li>
                 </ul>
               <p class="menu-note">Cakes are 9 inch rounds and sold in 1, 2 or 3 layers.</p>
-              <p class="menu-note">Cupcakes are sold by the half dozen or dozen</p>
+              <p class="menu-note">Cupcakes are sold by the half dozen or dozen.</p>
             </div>
 
             <div class="item grid-treat">
@@ -59,7 +59,7 @@
                   <li>Pecan Pie*</li>
                   <li>Derby Pie*</li>
                 </ul>
-              <p class="menu-note">*Seasonal item</p>
+              <p class="menu-note">*Seasonal item.</p>
             </div>
 
               <img class="treat treat-mobile" src="images/cupcake.png" alt="Cupcake with Pink Flowers">
