--- a/about.html
+++ b/about.html
@@ -22,11 +22,13 @@
       <main class="content">   
          <h1>About the Baker</h1>
    
-         <!-- ABOUT PARAGRAPHS          -->
+         <!-- ABOUT PARAGRAPHS -->
           <div class="about-div">
               <p class="body">Jay started baking cookies with her Grandma every Christmas when she was younger. That's one of the first memories Jay has of baking. Peanut butter, chocolate chip, sugar, thumbprint cookies and more. During college, Jay baked for her roommates as a means of relieving stress. It turned out she actually had some pretty mad skills in the kitchen. After college, Jay really delved into baking-- a chocolate cake with chocolate icing opened the door to the beauty of baking from scratch. The joy of sharing her food with others and the kitchen-aid mixer from her mom ignited her desire to leave the cube farm and branch out onto her own.</p> 
-              <br>         
+              
               <p class="body">Needing a break from the cube farm, Jay turned her passion for cooking and baking for others into her full time bread and butter. When she’s not testing out recipes, Jay is spending time with her dogs Sophia and Rambo, re-watching the Office or Harry Potter, and the occasional video game. <a href="menu.html">Menu</a> items are always changing, so be sure to check out new additions! Homemade pasta and other savory items will be available soon!</p>
+
+              <p>Have suggestions on thing Jay can add to the menu? Have something you want Jay to make but don't see it on the menu? Reach out via the <a href="contact.html">contact</a> page.</p>
 
           
             </div> 
