fixed a typ0, moved hover scale to large screens, changed name alert in js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="index">
             <p>Welcome to the bakery! We have a mulitude of treats.</p>
 
-            <p>There's no denying-- just about anything made from scratch is infitely better than a boxed mix. At Treats by Jay, everything is made from scratch!</p>
+            <p>There's no denying-- just about anything made from scratch is infinitely better than a boxed mix. At Treats by Jay, everything is made from scratch!</p>
             
             <p>Check out our <a href="menu.html">menu</a> to see what's currently in the oven!</p> 
           </div> 
